adds final changes

--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
             <nav>
                 
                 <ul>
-                    <li>About Me</li>
-                    <li>Projects</li>
-                    <li>Contact Me</li>
+                    <li><a href="#about-me">About me</a></li>
+                    <li><a href="#projects">Projects</a></li>
+                    <li><a href="#contact-me">Contact</a></li>
                 </ul>
                 <button class="hamburger" id="hamburger">
                     <i class="fas fa-bars"></i>
@@ -27,7 +27,7 @@
                 <div class="hero-text">
                     <h1>Kenasia Turner</h1>
                     <p> Full Stack Developer</p>
-                    <div class="button">About Me</div>
+                    <div class="button"><a href="#about-me">About Me</a></div>
                 </div>
                 <div class="socials">
                     <div><a href="http://www.github.com/kenasi123" class="social">
@@ -39,7 +39,7 @@
                 </div>
             </div>
         </section>
-        <section class="sub-section" id="about-me" >
+        <section class="sub-section" id="about-me">
             <div class="information"> 
                 <h2>About Me</h2>
                 <p>Hello My name is Kenasia. I'm a software developer, artist, & foodie!</p>
