--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com"> 
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
-    <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Poppins:ital,wght@0,300;0,400;0,500;1,200;1,300;1,800&display=swap" rel="stylesheet">  
+    <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Poppins:ital,wght@0,300;0,400;0,500;1,200;1,300;1,800&display=swap" rel="stylesheet"> 
+    <script src="https://kit.fontawesome.com/5c7808066c.js"crossorigin="anonymous"></script>
     <title>Porfolio</title>
 </head>
     <body>
@@ -22,6 +23,7 @@
                 <button class="hamburger" id="hamburger">
                     <i class="fas fa-bars"></i>
                 </button>
+                
             </nav>
             <div class="hero-area">
                 <div class="hero-text">
@@ -54,28 +56,28 @@
             <div class="project-card">
                 <img class="project-image" src="images/black-jack game.png" alt="Project One Image"/>
                   <h3>Black Jack Game</h3>
-                  <p class="subtext"></p>
+                  <p class="subtext">Created a game with Dom manipuation and Javascript</p>
                   <hr/>
                   <p class="subtext"><a class="project-link" href="https://github.com/Kenasi123/blackjack-exercise">View here</a></p>
             </div>
             <div class="project-card">
                 <img class="project-image" src="images/website.png" alt="Project One Image"/>
                   <h3>Hack-a-thon</h3>
-                  <p class="subtext"></p>
+                  <p class="subtext">Created a website using Bootstrap, Html, and Css</p>
                   <hr/>
                   <p class="subtext"><a class="project-link" href="https://www.github.com/Kenasi123/Hack-a-thon">View here</a></p>
             </div>
             <div class="project-card">
                 <img class="project-image" src="images/weather.png" alt="Project One Image"/>
                   <h3>Weather App</h3>
-                  <p class="subtext"></p>
+                  <p class="subtext">Created weather app using Html, Javascript, and Css. Used an Api using with Open Weather map</p>
                   <hr/>
                   <p class="subtext"><a class="project-link" href="https://www.github.com/Kenasi123/Weather-app">View here</a></p>
             </div>
             <div class="project-card">
                 <img class="project-image" src="images/netflix-clone2.png" alt="Project One Image"/>
                   <h3>Netflix Mini Clone</h3>
-                  <p class="subtext"></p>
+                  <p class="subtext">Used postgresSQL, Express, and React to create a Netflix Clone involves user authenication</p>
                   <hr/>
                   <p class="subtext"><a class="project-link" href="https://github.com/Kenasi123/miniNetflixClone">View here</a></p>
             </div>
@@ -86,6 +88,7 @@
             <p>Kenasi123@gmail.com</p>
         </footer>
 
-        <script src="app.js"></script>
+        <script src="app.js">
+        </script>
     </body>
 </html>
