--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <div class="information"> 
                 <h2>About Me</h2>
                 <p>Hello My name is Kenasia. I'm a software developer, artist, & foodie!</p>
-                <h2>Software Developement Skills</h2>
+                <h1>Skills</h1>
                 <p>Debugging, JavaScript, Python, Node.js, React, Bootstrap, Flexbox, HTML, CSS, PostgreSQL</p>
             </div>
                 <div class=headshot-container>
