--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             <div class="project-card">
                 <img class="project-image" src="images/black-jack game.png" alt="Project One Image"/>
                   <h3>Black Jack Game</h3>
-                  <p class="subtext">Created a game with Dom manipuation and Javascript</p>
+                  <p class="subtext">Created a game with Dom manipuation and Javascript.</p>
                   <hr/>
                   <p class="subtext"><a class="project-link" href="https://github.com/Kenasi123/blackjack-exercise">Git Hub</a></p>
                   <p class="subtext"><a class="project-link" href="https://kenasias-blackjack.netlify.app">View Here</a></p>
@@ -73,7 +73,7 @@
             <div class="project-card">
                 <img class="project-image" src="images/weather.png" alt="Project One Image"/>
                   <h3>Weather App</h3>
-                  <p class="subtext">.Lead a 4 member ggroup project. Created weather app using Html, Javascript, and Css. I also used an Api with Open Weather map</p>
+                  <p class="subtext">Lead a 4 member group project. Created weather app using Html, Javascript, and Css. I also used an Api from Open Weather Map.</p>
                   <hr/>
                   <p class="subtext"><a class="project-link" href="https://www.github.com/Kenasi123/Weather-app">Git Hub</a></p>
                   <p class="subtext"><a class="project-link" href="https://kenasia-weatherapp.netlify.app">View Here</a></p>
@@ -81,7 +81,7 @@
             <div class="project-card">
                 <img class="project-image" src="images/netflix-clone2.png" alt="Project One Image"/>
                   <h3>Netflix Mini Clone</h3>
-                  <p class="subtext">Used postgresSQL, Express, and React to create a Netflix Clone. Worked backend and front-end in a 5 member team, this app involves user authenication and react router</p>
+                  <p class="subtext">Used postgresSQL, Express, and React to create a Netflix Clone. Worked backend and front-end in a 5 member team, this app involves user authenication and react router.</p>
                   <hr/>
                   <p class="subtext"><a class="project-link" href="https://github.com/Kenasi123/miniNetflixClone">Git Hub</a></p>
                   <p class="subtext"><a class="project-link" href="https://kenasia-netflix.netlify.app">View Here</a></p>
